Bilder und Videos bearbeitet

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <img src="edrive_150_480x480px.png" alt="edrive 150" width="350" height="500" class="image-für-overlay">
                                 <div class="middle">
                                     <div class="overlay-text">
-                                        <a href="Produkt.html#premium_variante"> Premium Variante 1 </a>
+                                        <a href="Produkt.html#premium_variante"> eDrive 150 </a>
                                     </div>
                                 </div>
                                 <p class="Untertext-Produktbilder"> Für alle, die mehr wollen </p>
@@ -129,7 +129,7 @@
                                 <img src="edrive1000.jpg" alt="edrive1000" width="350" height="500" class="image-für-overlay">
                                 <div class="middle">
                                     <div class="overlay-text">
-                                        <a href="Produkt.html#premium_variante_2"> Premium Variante 2 </a>
+                                        <a href="Produkt.html#premium_variante_2"> eDrive 1000 </a>
                                     </div>
                                 </div>
                                 <p class="Untertext-Produktbilder"> Für lange Strecken </p>
