--- a/Produkt.html
+++ b/Produkt.html
@@ -255,7 +255,9 @@
               Fahrrad wie bisher nutzen kannst.</p>
 				</div>
 				<div class="column-50-right">
-					<img src="video 1.gif" alt="Weltsymbol" width="500" height="700" class="Bild-Anpassung_2">
+          <video autoplay loop muted playsinline width="500" height="auto" class="Bild-Anpassung_2">
+            <source src="video_1.webm" type="video/webm">
+          </video>
 				</div>
 			</div>
 		</div>
@@ -267,7 +269,9 @@
 		<div class="container-2">
 			<div class="row">
 				<div class="column-50-left">
-					<img src="video 2.gif" alt="Leute im Fahrrad" width="500" height="700" class="Bild-Anpassung">
+          <video autoplay loop muted playsinline width="500" height="auto" class="Bild-Anpassung">
+            <source src="video_2.webm" type="video/webm">
+          </video>
 				</div>
 
 				<div class="column-50-right">
@@ -397,7 +401,9 @@
             Fahrrad wie bisher nutzen kannst. </p>
 				</div>
 				<div class="column-50-right">
-					<img src="video 3.gif" alt="Weltsymbol" width="500" height="700" class="Bild-Anpassung_2">
+          <video autoplay loop muted playsinline width="500" height="auto" class="Bild-Anpassung_2">
+            <source src="video_3.webm" type="video/webm">
+          </video>
 				</div>
 			</div>
 		</div>
@@ -409,7 +415,9 @@
 		<div class="container-2">
 			<div class="row">
 				<div class="column-50-left">
-					<img src="video 5.gif" alt="Leute im Fahrrad" width="500" height="700" class="Bild-Anpassung">
+          <video autoplay loop muted playsinline width="500" height="auto" class="Bild-Anpassung">
+            <source src="video_5.webm" type="video/webm">
+          </video>
 				</div>
 
 				<div class="column-50-right">
