--- a/Über uns.html
+++ b/Über uns.html
@@ -83,7 +83,7 @@
                     unsere Fahrräder mit einem Elektroantrieb ausstatten. Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder umzurüsten, daher haben wir uns dazu entschlossen solch einen Antrieb zu entwickeln. </p>
                 <p>Um mit den Protoypen zu beginnen, haben wir unsere erste Produktionsstätte 2011 in Daniels Garage eröffnet.</p>
                 <div class="garage_ueberuns">
-                    <img src="garage_ueberuns.jpg" alt="In dieser Garage hat alles begonnen.">
+                    <img src="garage_ueberuns.webp" alt="In dieser Garage hat alles begonnen.">
                 </div>
                 <p>Durch die hohe Expertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand, haben
                     wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unseren Traum zur Wirklichkeit machen und das Produkt weiter verbessern.
