Footer angepasst, Pipe in den Titel der Webseite

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -4,7 +4,7 @@
 
 <head>
   <link rel="icon" href="neues_logo_transparent_300x300.png">
-  <title>Bikepower - Datenschutz</title>
+  <title>Bikepower | Datenschutz</title>
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -68,7 +68,7 @@
         <p>
         <p>In dieser Datenschutzerklärung informieren wir Sie über die Verarbeitung personenbezogener Daten bei der Nutzung dieser Website.</p>
         <p><b>Verantwortlicher</b></p>
-        <p>Verantwortlich für die Datenverarbeitung ist<br><em>Maximilian Rampp, Marienstraße 20, 89518 Heidenheim, 0152/555666777, maximilian.rampp@bikes.de</em></p>
+        <p>Verantwortlich für die Datenverarbeitung ist<br><em>Maximilian Rampp, Marienstraße 20, 89518 Heidenheim, 0152/555666777, <a href='mailto:maximilian.rampp@bikepower.de'>maximilian.rampp@bikepower.de</a></em></p>
         <p><b>Personenbezogene Daten</b></p>
         <p>Personenbezogene Daten sind alle Informationen, die sich auf eine identifizierte oder identifizierbare natürliche Person (im Folgenden "betroffene Person") beziehen. Als identifizierbar wird eine natürliche Person angesehen, die direkt
           oder indirekt, insbesondere mittels Zuordnung zu einer Kennung wie einem Namen, zu einer Kennnummer, zu Standortdaten, zu einer Online-Kennung oder zu einem oder mehreren besonderen Merkmalen identifiziert werden kann, die Ausdruck der
@@ -126,50 +126,83 @@
           und löschen Sie die Cookies in Ihrem Browser. Twitter hat sich dem Datenschutzabkommen „Privacy Shield“ zwischen der USA und der EU unterworfen. Mehr zum Datenschutz von Twitter erfahren Sie unter <a
             href="https://twitter.com/privacy">https://twitter.com/privacy</a>.</p>
         <p>Quelle: <a href="https://www.anwalt.de/vorlage/muster-datenschutzerklaerung.php" rel="nofollow">Muster-Datenschutzerklärung von anwalt.de</a></p>
+
+        <h1>Impressum</h1>
+        <hr>
+        <p>Angaben gemäß § 5 TMG</p>
+        <p>Bikepower GmbH<br>
+          Marienstraße 20<br>
+          89518 Heidenheim<br>
+        </p>
+        <p> <b>Vertreten durch: </b><br>
+          Maximilian Rampp<br>
+        </p>
+        <p><b>Kontakt:</b> <br>
+          Telefon: 0152/555666777<br>
+          E-Mail: <a href='mailto:maximilian.rampp@bikepower.de'>maximilian.rampp@bikepower.de</a></br></p>
+        <p><b>Umsatzsteuer-ID: </b> <br>
+          Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: 123456789.<br><br>
+          <b>Wirtschafts-ID: </b><br>
+          123456789<br>
+        </p>
+        <p><b>Aufsichtsbehörde:</b><br>
+          Musteraufsicht Heidenheim<br></p>
+        <p><b>Haftungsausschluss: </b><br><br><b>Haftung für Inhalte</b><br><br>
+          Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte
+          auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen,
+          die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt
+          der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.<br><br><b>Urheberrecht</b><br><br>
+          Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes
+          bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber
+          erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis.
+          Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p><br>
+        Impressum vom <a href="https://www.impressum-generator.de">Impressum Generator</a> der <a href="https://www.kanzlei-hasselbach.de/standorte/bonn/">Kanzlei Hasselbach, Bonn</a>
+
+        <p></p>
       </div>
 
 
     </main>
     <!--Hier endet der Main Bereich-->
     <div class="pre_footer">
-            <img src="AdobeStock_Footer.svg" alt="">
+      <img src="AdobeStock_Footer.svg" alt="">
     </div>
     <footer>
-        <!--Hier beginnt der Footer Bereich-->
-        <div class="footer">
-            <div class="footer_content">
-                <div class="column-footer-left">
-                    <h4>Übersicht:</h4>
-                    <hr>
-                    <p><a href="index.html">Home</a><br></p>
-                    <p><a href="Produkt.html">Produkte</a><br></p>
-                    <p><a href="Kontakt.html">Kontakt</a><br></p>
-                    <p><a href="Über uns.html">Über uns</a><br></p>
-                    <p><a href="datenschutz.html">Datenschutz</a></p>
-                </div>
-                <div class="column-footer-middle">
-                    <h4>Kontakt:</h4>
-                    <hr>
-                    <p>Electronic Bikes GmbH</p>
-                    <p>Marienstraße 20</p>
-                    <p>89518 Heidenheim</p>
-                </div>
-                <div class="column-footer-right">
-                    <h4>Social Media:</h4>
-                    <hr>
-                    <p>News finden Sie hier</p>
-                    <div class="social_media">
-                        <a href="https://www.facebook.de"><img src="facebook_logo.svg" alt="Hier kommen Sie zu Facebook"></a>
-                    </div>
-                    <div class="social_media">
-                        <a href="https://www.instagram.com"><img src="instagram_logo.svg" alt="Hier kommen Sie zu Instagram"></a>
-                    </div>
-                    <div class="social_media">
-                        <a href="https://www.youtube.de"><img src="youtube_logo.svg" alt="Das ist der Youtube Auftritt"></a>
-                    </div>
-                </div>
+      <!--Hier beginnt der Footer Bereich-->
+      <div class="footer">
+        <div class="footer_content">
+          <div class="column-footer-left">
+            <h4>Übersicht:</h4>
+            <hr>
+            <p><a href="index.html">Home</a><br></p>
+            <p><a href="Produkt.html">Produkte</a><br></p>
+            <p><a href="Kontakt.html">Kontakt</a><br></p>
+            <p><a href="Über uns.html">Über uns</a><br></p>
+            <p><a href="datenschutz.html">Datenschutz</a></p>
+          </div>
+          <div class="column-footer-middle">
+            <h4>Kontakt:</h4>
+            <hr>
+            <p>Bikepower GmbH</p>
+            <p>Marienstraße 20</p>
+            <p>89518 Heidenheim</p>
+          </div>
+          <div class="column-footer-right">
+            <h4>Social Media:</h4>
+            <hr>
+            <p>News finden Sie hier</p>
+            <div class="social_media">
+              <a href="https://www.facebook.de"><img src="facebook_logo.svg" alt="Hier kommen Sie zu Facebook"></a>
             </div>
+            <div class="social_media">
+              <a href="https://www.instagram.com"><img src="instagram_logo.svg" alt="Hier kommen Sie zu Instagram"></a>
+            </div>
+            <div class="social_media">
+              <a href="https://www.youtube.de"><img src="youtube_logo.svg" alt="Das ist der Youtube Auftritt"></a>
+            </div>
+          </div>
         </div>
+      </div>
 
 
     </footer>
