--- a/Kontakt.html
+++ b/Kontakt.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="icon" href="neues_logo_transparent_300x300.png">
-    <title>Bikepower - Kontakt</title>
+    <title>Bikepower | Kontakt</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -222,7 +222,7 @@
                 <div class="column-footer-middle">
                     <h4>Kontakt:</h4>
                     <hr>
-                    <p>Electronic Bikes GmbH</p>
+                    <p>Bikepower GmbH</p>
                     <p>Marienstraße 20</p>
                     <p>89518 Heidenheim</p>
                 </div>
