--- a/Kontakt.html
+++ b/Kontakt.html
@@ -90,13 +90,13 @@
                                     <p>Telefonnummer</p>
                                 </div>
                                 <div class="contact-description">
-                                    <p>E-Mail</p>
-                                </div>
-                                <div class="contact-description">
                                     <p>WhatsApp-Chat</p>
                                 </div>
                             </div>
                             <div class="contact-data">
+                                <div class="contact-detail">
+                                  <p> <a href="tel:+49732127220">07321/27220</a> </p>
+                                </div>
                                 <div class="contact-detail">
                                     <p><a href="tel:+49152555666777">0152/555666777</a></p>
                                 </div>
