--- a/Über uns.html
+++ b/Über uns.html
@@ -104,7 +104,7 @@
                             <img src="dome_600x600.png" alt="Hier sollte eigentlich Dominik sein">
                         </div>
                         <div class="employee-text">
-                            <p>Dominik ist nach der Höhle der Löwen zu uns gestoßen. Er hat unsere Idee im Fernsehen gesehen und war direkt begeistert. Er hat sich bei uns gemeldet und wir haben sofort gemerkt, dass wir alle an einem Strang ziehen. Durch
+                            <p>Dominik ist nach der Höhle der Löwen zu uns gestoßen. Er hat unsere Idee im Fernsehen gesehen und war direkt begeistert. Er hat sich bei uns gemeldet und wir haben sofort gemerkt, dass wir alle an einem Strang ziehen. Da
                                 die bereits vorhanden Kenntnisse in der Führung von Unternehmen, hat Dominik die Geschäftsführung übernommen.</p>
                         </div>
                     </div>
