--- a/Produkt.html
+++ b/Produkt.html
@@ -129,10 +129,11 @@
       <div class="container-2">
       	<div class="row">
       		<div class="column-center">
-      			<h2> Einfache Montage </h2>
-      				<iframe width="560" height="315" src="https://www.youtube.com/embed/w0DfelncDHI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-      				</iframe>
-
+      			<h2> Einfache Montage: Hier zum Tutorial </h2>
+              <a href="https://www.youtube.com/watch?v=w0DfelncDHI">
+                <img
+              src="Bikestail_Montagevideo.png"  alt="Produktbild Bikestail" width="560" height="315">
+                </a>
       		</div>
 
       	</div>
