--- a/Produkt.html
+++ b/Produkt.html
@@ -36,13 +36,13 @@
                     <a href="#">Produkte</a>
                     <ul class="nav-dropdown">
                       <li>
-                        <a href="#">Standard</a>
+                        <a href="Produkt.html#standard_variante">Standard</a>
                       </li>
                       <li>
-                        <a href="#">eDrive 150</a>
+                        <a href="Produkt.html#premium_variante">eDrive 150</a>
                       </li>
                       <li>
-                        <a href="#">eDrive 500</a>
+                        <a href="Produkt.html#premium_variante_2">eDrive 1000</a>
                       </li>
                     </ul>
                   </li>
@@ -131,8 +131,7 @@
       		<div class="column-center">
       			<h2> Einfache Montage: Hier zum Tutorial </h2>
               <a href="https://www.youtube.com/watch?v=w0DfelncDHI">
-                <img
-              src="Bikestail_Montagevideo.png"  alt="Produktbild Bikestail" width="560" height="315">
+                <img class="tutorial" src="Bikestail_Montagevideo.png"  alt="Produktbild Bikestail">
                 </a>
       		</div>
 
