--- a/Über uns.html
+++ b/Über uns.html
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="employee">
-                    <h2>International Relationsship Management</h2>
+                    <h2>International Relationship Management</h2>
                     <hr>
                     <h3>Alvaro Requesens.</h3>
                     <div class="employee-detail">
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="employee">
-                    <h2>Customer Relationsship Management</h2>
+                    <h2>Customer Relationship Management</h2>
                     <hr>
                     <h3>Maximilian Rampp.</h3>
                     <div class="employee-detail">
